# LLM-Reasoning-with-MCTS

./: README.md  pyproject.toml  requirements.txt  setup.py
src/mcts/: crossword_mcts.py  mcts_cot.py
src/tot/: models.py
src/tot/tasks/: crosswords.py
